tusd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tusd-ingress
spec:
  backend:
    serviceName: tusd-loadbalancer
    servicePort: 80
